--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "redux-saga-statechart",
+  "name": "redux-saga-state-machine",
   "version": "0.0.1",
-  "description": "Statechart based sagas",
-  "main": "index.js",
-  "repository": "git@github.com:karl/redux-saga-statechart.git",
+  "description": "Redux Saga based state machines",
+  "main": "dist/redux-saga-state-machine.cjs.js",
+  "module": "dist/redux-saga-state-machine.esm.js",
+  "repository": "git@github.com:karl/redux-saga-state-machine.git",
   "author": "Karl O'Keeffe <karl@geckoboard.com>",
   "license": "MIT",
-  "dependencies": {
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w"
+  },
+  "files": ["dist"],
+  "devDependencies": {
+    "rollup": "^0.58.0",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "xstate": "^3.1.1"
+  },
+  "peerDependencies": {
     "xstate": "^3.1.1"
   }
 }
