--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dist"
   ],
   "devDependencies": {
+    "redux-saga": "^0.16.0",
     "rollup": "^0.58.0",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
