--- a/redux-saga-state-machine/tsconfig.json
+++ b/redux-saga-state-machine/tsconfig.json
@@ -5,7 +5,7 @@
     "strictNullChecks": true,
     "outDir": "./dist",
     "moduleResolution": "node",
-    "sourceMap": true
+    "sourceMap": true,
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules/**/*"]
