--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -16,8 +16,11 @@
     "dist"
   ],
   "devDependencies": {
+    "prettier": "^1.13.7",
     "redux-saga": "^0.16.0",
     "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.13.0",
+    "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.9.2",
     "xstate": "^3.3.2"
   },
