--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "yarn run lint && tsc",
     "dev": "tsc --watch",
+    "test": "jest",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
   },
@@ -16,8 +17,11 @@
     "dist"
   ],
   "devDependencies": {
+    "@types/jest": "^23.1.3",
+    "jest": "^23.2.0",
     "prettier": "^1.13.7",
     "redux-saga": "^0.16.0",
+    "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-plugin-prettier": "^1.3.0",
