--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -17,8 +17,9 @@
     "dist"
   ],
   "devDependencies": {
-    "@types/jest": "^23.1.3",
-    "jest": "^23.2.0",
+    "@types/jest": "20.0.4",
+    "jest": "20.0.4",
+    "jest-cli": "20.0.4",
     "prettier": "^1.13.7",
     "redux-saga": "^0.16.0",
     "ts-jest": "^22.4.6",
