--- a/redux-saga-state-machine/tsconfig.json
+++ b/redux-saga-state-machine/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "./dist",
     "moduleResolution": "node",
     "sourceMap": true,
+    "declaration": true,
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules/**/*"]
+  "exclude": ["node_modules/**/*", "src/**/*.test.ts"]
 }
