--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "private": true,
   "workspaces": {
-    "packages": ["redux-saga-state-machine", "example"]
+    "packages": [
+      "redux-saga-state-machine",
+      "xstate-to-svg",
+      "example"
+    ]
   }
 }
