--- a/xstate-to-svg/package.json
+++ b/xstate-to-svg/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "20.0.4",
     "jest": "20.0.4",
     "jest-cli": "20.0.4",
+    "mkdirp": "^0.5.1",
     "prettier": "^1.13.7",
     "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
