--- a/xstate-to-svg/package.json
+++ b/xstate-to-svg/package.json
@@ -23,6 +23,7 @@
     "jest-cli": "20.0.4",
     "mkdirp": "^0.5.1",
     "prettier": "^1.13.7",
+    "rimraf": "^2.6.2",
     "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
