--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           root: ~/repo
           paths: .
 
-          deploy:
+  deploy:
     <<: *defaults
     steps:
       - attach_workspace:
@@ -44,9 +44,9 @@ jobs:
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
-      - run:
-          name: Publish package
-          command: npm publish
+      - run: cd xstate-to-svg && npm publish
+      - run: cd redux-saga-state-machine && npm publish
+
 
 workflows:
   version: 2
