Remove example as it was messing with Jest

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "workspaces": {
     "packages": [
       "redux-saga-state-machine",
-      "xstate-to-svg",
-      "example"
+      "xstate-to-svg"
     ]
   }
 }
