Update state machine cat and pin deps

--- a/xstate-to-svg/package.json
+++ b/xstate-to-svg/package.json
@@ -21,17 +21,17 @@
     "@types/jest": "23.1.4",
     "jest": "23.3.0",
     "jest-cli": "23.3.0",
-    "mkdirp": "^0.5.1",
-    "prettier": "^1.13.7",
-    "rimraf": "^2.6.2",
-    "ts-jest": "^23.0.0",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^2.9.2",
-    "xstate": "^3.3.2"
+    "mkdirp": "0.5.1",
+    "prettier": "1.13.7",
+    "rimraf": "2.6.2",
+    "ts-jest": "23.0.0",
+    "tslint": "5.10.0",
+    "tslint-config-prettier": "1.13.0",
+    "tslint-plugin-prettier": "1.3.0",
+    "typescript": "2.9.2",
+    "xstate": "3.3.2"
   },
   "dependencies": {
-    "state-machine-cat": "2.7.0-beta-1"
+    "state-machine-cat": "3.0.0"
   }
 }
