--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -21,17 +21,17 @@
     "@types/jest": "23.1.4",
     "jest": "23.3.0",
     "jest-cli": "23.3.0",
-    "prettier": "^1.13.7",
-    "redux-saga": "^0.16.0",
-    "ts-jest": "^23.0.0",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^2.9.2",
-    "xstate": "^3.3.2"
+    "prettier": "1.13.7",
+    "redux-saga": "0.16.0",
+    "ts-jest": "23.0.0",
+    "tslint": "5.10.0",
+    "tslint-config-prettier": "1.13.0",
+    "tslint-plugin-prettier": "1.3.0",
+    "typescript": "2.9.2",
+    "xstate": "3.3.2"
   },
   "peerDependencies": {
-    "redux-saga": "^0.16.0",
-    "xstate": "^3.3.2"
+    "redux-saga": "0.16.0",
+    "xstate": "3.3.2"
   }
 }
