Connect example to redux-saga-state-machine

--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -30,7 +30,7 @@
     "xstate": "3.3.2"
   },
   "peerDependencies": {
-    "redux-saga": "0.16.0",
-    "xstate": "3.3.2"
+    "redux-saga": "^0.16.0",
+    "xstate": "^3.3.2"
   }
 }
