--- a/example/package.json
+++ b/example/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "redux-saga-state-machine": "^0.0.8",
+    "xstate": "^3.3.3"
   }
 }
