Try fixing greenkeeper lockfile

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
+      - run: yarn global add greenkeeper-lockfile@2
+
       - run: yarn install
 
       - save_cache:
@@ -26,7 +28,7 @@ jobs:
 
       - run:
           name: Update yarn lockfile
-          command: yarn run greenkeeper-lockfile-update
+          command: greenkeeper-lockfile-update
 
       - run: cd xstate-to-svg && yarn run lint
       - run: cd xstate-to-svg && yarn run test
@@ -38,7 +40,7 @@ jobs:
 
       - run:
           name: Upload yarn lockfile
-          command: yarn run greenkeeper-lockfile-upload
+          command: greenkeeper-lockfile-upload
 
       - persist_to_workspace:
           root: ~/repo
