--- a/example/package.json
+++ b/example/package.json
@@ -32,7 +32,8 @@
     "typescript": "2.9.2",
     "webpack": "4.16.1",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.4"
+    "webpack-dev-server": "3.1.4",
+    "xstate-to-svg": "0.0.9"
   },
   "dependencies": {
     "react": "16.4.1",
