--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "./dist",
     "moduleResolution": "node",
     "sourceMap": true,
-    "declaration": true,
+    // "declaration": true,  // Disable this to work around Typescript bug: https://github.com/Microsoft/TypeScript/issues/25047
     "allowSyntheticDefaultImports": true, // allows import React from 'react' rather than import * as React from 'react'
     "noImplicitReturns": true,
     "noImplicitAny": true,
