--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,26 +60,16 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/repo
-      - run:
-          name: Authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
-      - run: cd xstate-to-svg && npm publish
-      - run: cd redux-saga-state-machine && npm publish
 
+      - run:
+          name: Semantic Release
+          command: yarn run semantic-release
 
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build:
-          filters:
-            tags:
-              only: /^v.*/
       - deploy:
           requires:
             - build
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
