--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "scripts": {
     "greenkeeper-lockfile-update": "greenkeeper-lockfile-update",
     "greenkeeper-lockfile-upload": "greenkeeper-lockfile-upload",
-    "publish": "lerna publish --skip-npm && git push --follow-tags"
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "greenkeeper-lockfile": "2",
-    "lerna": "^2.11.0"
+    "lerna": "^2.11.0",
+    "semantic-release": "^15.8.1"
   }
 }
