--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - build:
+      - build
       - deploy:
           requires:
             - build
