--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -21,6 +21,7 @@
     "jest": "23.3.0",
     "jest-cli": "23.3.0",
     "prettier": "1.13.7",
+    "redux": "4.0.0",
     "redux-saga": "0.16.0",
     "ts-jest": "23.0.1",
     "tslint": "5.10.0",
@@ -30,6 +31,7 @@
     "xstate": "3.3.3"
   },
   "peerDependencies": {
+    "redux": "4.0.0",
     "redux-saga": "0.16.0",
     "xstate": "3.3.3"
   }
