--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "scripts": {
     "greenkeeper-lockfile-update": "greenkeeper-lockfile-update",
     "greenkeeper-lockfile-upload": "greenkeeper-lockfile-upload",
-    "semantic-release": "semantic-release"
+    "publish": "lerna publish --conventional-commits"
   },
   "devDependencies": {
     "greenkeeper-lockfile": "2",
-    "lerna": "^2.11.0",
-    "semantic-release": "^15.8.1"
+    "lerna": "^2.11.0"
   }
 }
