--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,7 @@
 {
   "name": "example",
   "private": true,
+  "version": "0.0.9",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
