--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,3 +79,6 @@ workflows:
       - deploy:
           requires:
             - build
+          branches:
+            only:
+              - master
