--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "greenkeeper-lockfile-update": "greenkeeper-lockfile-update",
     "greenkeeper-lockfile-upload": "greenkeeper-lockfile-upload",
-    "publish": "lerna publish --conventional-commits"
+    "publish": "lerna publish --conventional-commits --yes"
   },
   "devDependencies": {
     "greenkeeper-lockfile": "2",
