feat: Try again with only publishing on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,6 @@ workflows:
       - deploy:
           requires:
             - build
-          branches:
-            only:
-              - master
+          filters:
+            branches:
+              only: master
