feat: Try and avoid GitHub host key checking

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,10 @@ jobs:
             git config --global user.email "circleci@monket.net"
             git config --global user.name "circleci"
 
+      - run:
+        name: Avoid hosts unknown for github
+        command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+
       - run: yarn run publish
 
 workflows:
