Try fixing infinite deploy bug

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,6 @@ workflows:
             - build
           filters:
             branches:
-              only: master
+              ignore: /.*/
             tags:
               ignore: /^v.*/
