Fix version tag regex

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,4 +94,4 @@ workflows:
             - build
           filters:
             tags:
-              ignore: /^v.*/
+              ignore: /^v\d+.\d+.\d+.*/
