--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ workflows:
       - build:
           filters:
             tags:
-              ignore: /.*/
+              ignore: /^v.*/
       - deploy:
           requires:
             - build
