--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,12 +88,12 @@ workflows:
       - build:
           filters:
             tags:
-              ignore: /^v.*/
+              ignore: /^v\d+.\d+.\d+$/
       - deploy:
           requires:
             - build
           filters:
             tags:
-              ignore: /^v.*/
+              ignore: /^v\d+.\d+.\d+$/
             branches:
               ignore: /.*/
