--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,17 +83,23 @@ jobs:
 
 workflows:
   version: 2
+  un-tagged-build:
+    jobs:
+      - build:
+          filters:
+            tags:
+              ignore: /.*/
   build-deploy:
     jobs:
       - build:
           filters:
             tags:
-              only: /^.*/
+              only: /.*/
       - deploy:
           requires:
             - build
           filters:
             tags:
-              only: /^.*/
+              only: /.*/
             branches:
               ignore: /.*/
