--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,23 +83,23 @@ jobs:
 
 workflows:
   version: 2
-  un-tagged-build:
+  un-tagged-build-and-deploy:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /.*/
+  tagged-build-only:
     jobs:
       - build:
           filters:
             tags:
               ignore: /.*/
-  build-deploy:
-    jobs:
-      - build:
-          filters:
-            tags:
-              only: /.*/
       - deploy:
           requires:
             - build
           filters:
             tags:
-              only: /.*/
+              ignore: /.*/
             branches:
               ignore: /.*/
