--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,5 +96,7 @@ workflows:
     jobs:
       - build:
           filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /.*/
