--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,8 @@ workflows:
           filters:
             branches:
               only: master
+            tags:
+              ignore: /.*/
   tagged-build-only:
     jobs:
       - build:
