--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,10 +66,9 @@ jobs:
       - run:
           name: Deploy
           command: |
-            COMMIT_MESSAGE=$(git log --format=oneline -n 1 $CIRCLE_SHA1)
-            if [[ $COMMIT_MESSAGE =~ ^v\d+\.\d+\.\d+$ ]];
+            commit_message=$(git log --format=oneline -n 1 $CIRCLE_SHA1)
+            if [[ ! $commit_message =~ ^v\d+\.\d+\.\d+$ ]];
             then
-
               git config --global user.email "circleci@monket.net"
               git config --global user.name "circleci"
 
