--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - run:
           name: Deploy
           command: |
-            commit_message=$(git log --format=oneline -n 1 $CIRCLE_SHA1)
+            commit_message=$(git log --format=%s -n 1 $CIRCLE_SHA1)
             if [[ ! $commit_message =~ ^v\d+\.\d+\.\d+$ ]];
             then
               git config --global user.email "circleci@monket.net"
