--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,11 +66,14 @@ jobs:
       - run:
           name: Deploy
           command: |
-            commit_message=$(git log --format=%s -n 1 $CIRCLE_SHA1)
-            if [[ ! $commit_message =~ ^(v[0-9]+\.[0-9]+\.[0-9]+|no-deploy:.*)$ ]];
+            if [[ $CIRCLE_BRANCH == 'master' ]];
             then
-              git config --global user.email "circleci@monket.net"
-              git config --global user.name "circleci"
+              commit_message=$(git log --format=%s -n 1 $CIRCLE_SHA1)
+              if [[ ! $commit_message =~ ^(v[0-9]+\.[0-9]+\.[0-9]+|no-deploy:.*)$ ]];
+              then
+                git config --global user.email "circleci@monket.net"
+                git config --global user.name "circleci"
 
-              yarn run publish
+                yarn run publish
+              fi
             fi
