--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "private": true,
+  "engines": {
+    "node": ">= 8.0.0"
+  },
   "workspaces": {
     "packages": [
       "redux-saga-state-machine",
@@ -8,6 +11,8 @@
     ]
   },
   "scripts": {
+    "start": "lerna run start --parallel",
+    "test": "lerna run test --parallel -- --watch",
     "publish": "lerna publish --conventional-commits --yes"
   },
   "devDependencies": {
