--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
+    "@types/color": "^3.0.0",
     "@types/react": "16.4.7",
     "@types/react-dom": "16.0.6",
     "@types/react-redux": "6.0.5",
@@ -19,6 +20,8 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
+    "color": "^3.0.0",
+    "color-hash": "^1.0.3",
     "jest": "23.4.1",
     "jest-cli": "23.4.1",
     "prettier": "1.13.7",
@@ -35,6 +38,7 @@
     "xstate-to-svg": "^0.1.18"
   },
   "dependencies": {
+    "kuker-emitters": "^6.7.4",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-redux": "5.0.7",
