--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "lerna run start --parallel",
-    "test": "lerna run test --parallel -- --watch",
+    "test": "lerna run test",
     "publish": "lerna publish --conventional-commits --yes"
   },
   "devDependencies": {
