feat: Play around with Kuker dev tools (#30)
* Play around with Kuker dev tools

* Try fixing up tests

* Fix build

And add build for example

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "scripts": {
     "start": "lerna run start --parallel",
-    "test": "lerna run test --parallel -- --watch",
+    "test": "lerna run test",
+    "lint": "lerna run lint",
+    "build": "lerna run build",
     "publish": "lerna publish --conventional-commits --yes"
   },
   "devDependencies": {
