--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,6 @@
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
-    "@types/color": "^3.0.0",
     "@types/react": "16.4.7",
     "@types/react-dom": "16.0.6",
     "@types/react-redux": "6.0.5",
@@ -21,12 +20,11 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
-    "color": "^3.0.0",
-    "color-hash": "^1.0.3",
     "jest": "23.4.1",
     "jest-cli": "23.4.1",
     "prettier": "1.13.7",
     "react-hot-loader": "4.3.3",
+    "string-hash": "^1.1.3",
     "ts-jest": "23.0.0",
     "ts-loader": "4.4.2",
     "tslint": "5.11.0",
