--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "build": "webpack --config ./webpack.config.js --mode production",
     "test": "jest",
+    "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
   },
@@ -22,6 +23,7 @@
     "babel-preset-stage-2": "6.24.1",
     "jest": "23.4.1",
     "jest-cli": "23.4.1",
+    "jest-junit": "5.1.0",
     "prettier": "1.13.7",
     "react-hot-loader": "4.3.4",
     "string-hash": "^1.1.3",
