--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "test": "lerna run test",
     "lint": "lerna run lint",
     "build": "lerna run build",
-    "publish": "lerna publish --conventional-commits --yes"
+    "publish": "lerna publish --conventional-commits --yes",
+    "junit-merge": "junit-merge ./example/junit.xml ./redux-saga-state-machine/junit.xml ./xstate-to-svg/junit.xml --out ./junit.xml"
   },
   "devDependencies": {
-    "lerna": "^2.11.0"
+    "lerna": "^2.11.0",
+    "junit-merge": "1.3.0"
   }
 }
