--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -11,6 +11,7 @@
     "build": "yarn run lint && tsc",
     "start": "tsc --watch",
     "test": "jest",
+    "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
   },
@@ -20,6 +21,7 @@
   "devDependencies": {
     "jest": "23.4.1",
     "jest-cli": "23.4.1",
+    "jest-junit": "5.1.0",
     "prettier": "1.13.7",
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
