--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     // "declaration": true,  // Disable this to work around Typescript bug: https://github.com/Microsoft/TypeScript/issues/25047
     "allowSyntheticDefaultImports": true, // allows import React from 'react' rather than import * as React from 'react'
+    "downlevelIteration": true,
     "noImplicitReturns": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
