--- a/redux-saga-state-machine/tsconfig.json
+++ b/redux-saga-state-machine/tsconfig.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true, // allows import React from 'react' rather than import * as React from 'react'
+    "downlevelIteration": true,
     "noImplicitReturns": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
@@ -17,7 +18,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "alwaysStrict": true,
-    "baseUrl": ".", // allow absolute imports to compile eg import Button from 'src/comps/Button'   
+    "baseUrl": ".", // allow absolute imports to compile eg import Button from 'src/comps/Button'
     "paths": {
       "src/*": ["src/*"] // makes VSCode Auto-Import use absolute imports (from 'src/blah') rather than relative (from '../../blah')
     },
