--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
+    "@types/lolex": "^2.1.3",
     "@types/react": "16.4.11",
     "@types/react-dom": "16.0.7",
     "@types/react-redux": "6.0.6",
@@ -21,9 +22,11 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
+    "bluebird": "3.5.1",
     "jest": "23.5.0",
     "jest-cli": "23.5.0",
     "jest-junit": "5.1.0",
+    "lolex": "2.7.1",
     "prettier": "1.14.2",
     "react-hot-loader": "4.3.4",
     "string-hash": "^1.1.3",
