--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "junit-merge": "junit-merge ./example/junit.xml ./redux-saga-state-machine/junit.xml ./xstate-to-svg/junit.xml --out ./junit.xml"
   },
   "devDependencies": {
-    "lerna": "^3.0.3",
+    "lerna": "2.11.0",
     "junit-merge": "1.3.0"
   }
 }
