--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -8,7 +8,7 @@
   "author": "Karl O'Keeffe <github@monket.net>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn run lint && tsc",
+    "build": "npm run lint && tsc",
     "start": "tsc --watch",
     "test": "jest",
     "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
