--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
-    "@types/lolex": "^2.1.3",
+    "@types/lolex": "2.1.3",
     "@types/react": "16.4.14",
     "@types/react-dom": "16.0.7",
     "@types/react-redux": "6.0.9",
@@ -21,7 +21,7 @@
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
     "jest-junit": "5.1.0",
-    "lolex": "2.7.4",
+    "lolex": "2.7.5",
     "prettier": "1.14.2",
     "react-hot-loader": "4.3.6",
     "string-hash": "^1.1.3",
