--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -19,9 +19,12 @@
     "dist"
   ],
   "devDependencies": {
+    "@types/lolex": "2.1.3",
+    "bluebird": "3.5.2",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
     "jest-junit": "5.1.0",
+    "lolex": "2.7.5",
     "prettier": "1.14.2",
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
