--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
-    "@types/lolex": "^2.1.3",
+    "@types/lolex": "2.1.3",
     "@types/react": "16.4.14",
     "@types/react-dom": "16.0.7",
     "@types/react-redux": "6.0.9",
@@ -24,7 +24,7 @@
     "lolex": "2.7.4",
     "prettier": "1.14.2",
     "react-hot-loader": "4.3.6",
-    "string-hash": "^1.1.3",
+    "string-hash": "1.1.3",
     "ts-jest": "23.1.4",
     "ts-loader": "5.1.1",
     "tslint": "5.11.0",
@@ -34,16 +34,16 @@
     "webpack": "4.19.1",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.8",
-    "xstate-to-svg": "^0.6.0"
+    "xstate-to-svg": "0.6.0"
   },
   "dependencies": {
-    "kuker-emitters": "^6.7.4",
+    "kuker-emitters": "6.7.4",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
-    "redux-saga-state-machine": "^0.6.0",
+    "redux-saga-state-machine": "0.6.0",
     "xstate": "3.3.3"
   }
 }
