--- a/xstate-to-svg/package.json
+++ b/xstate-to-svg/package.json
@@ -19,6 +19,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@types/mkdirp": "0.5.2",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
     "jest-junit": "5.1.0",
@@ -35,6 +36,6 @@
   "dependencies": {
     "@types/jest": "^23.3.0",
     "@types/rimraf": "^2.0.2",
-    "state-machine-cat": "3.0.3"
+    "state-machine-cat": "^3.0.3"
   }
 }
