--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -36,8 +36,8 @@
     "xstate": "3.3.3"
   },
   "peerDependencies": {
-    "redux": "4.0.0",
-    "redux-saga": "0.16.0",
-    "xstate": "3.3.3"
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "xstate": "^3.3.3"
   }
 }
