Try running release on this branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,9 +58,9 @@ jobs:
             fi
 
       - run:
-          name: Deploy
+          name: Release to npm
           command: |
-            if [[ $CIRCLE_BRANCH == 'master' ]];
+            if [[ $CIRCLE_BRANCH == 'fix-release' ]];
             then
               commit_message=$(git log --format=%s -n 1 $CIRCLE_SHA1)
               if [[ ! $commit_message =~ ^(v[0-9]+\.[0-9]+\.[0-9]+|no-deploy:.*)$ ]];
