--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,15 @@ jobs:
 
       - run:
           name: Authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+          command: |
+            echo 'npm whoami'
+            npm whoami
+
+            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+
+            echo 'npm whoami'
+            npm whoami
+
 
       - run:
           name: Avoid hosts unknown for github
@@ -32,17 +40,9 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: cd xstate-to-svg && yarn run lint
-      - run: cd xstate-to-svg && yarn run test:ci
-      - run: cd xstate-to-svg && yarn run build
-
-      - run: cd redux-saga-state-machine && yarn run lint
-      - run: cd redux-saga-state-machine && yarn run test:ci
-      - run: cd redux-saga-state-machine && yarn run build
-
-      - run: cd example && yarn run lint
-      - run: cd example && yarn run test:ci
-      - run: cd example && yarn run build
+      - run: yarn run lint
+      - run: yarn run test:ci
+      - run: yarn run build
 
       - run: yarn run junit-merge
       - store_test_results:
@@ -62,6 +62,10 @@ jobs:
           command: |
             if [[ $CIRCLE_BRANCH == 'fix-release' ]];
             then
+              echo 'npm whoami'
+              npm whoami
+
+              echo 'Releasing to npm'
               commit_message=$(git log --format=%s -n 1 $CIRCLE_SHA1)
               if [[ ! $commit_message =~ ^(v[0-9]+\.[0-9]+\.[0-9]+|no-deploy:.*)$ ]];
               then
