--- a/example/package.json
+++ b/example/package.json
@@ -1,7 +1,7 @@
 {
   "name": "example",
   "private": true,
-  "version": "0.6.0",
+  "version": "0.7.1",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
@@ -34,7 +34,7 @@
     "webpack": "4.19.1",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.8",
-    "xstate-to-svg": "0.6.0"
+    "xstate-to-svg": "^0.7.1"
   },
   "dependencies": {
     "kuker-emitters": "6.7.4",
@@ -43,7 +43,7 @@
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
-    "redux-saga-state-machine": "0.6.0",
+    "redux-saga-state-machine": "^0.7.0",
     "xstate": "3.3.3"
   }
 }
