--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages": [
       "redux-saga-state-machine",
       "xstate-to-svg",
-      "example"
+      "example",
+      "website"
     ]
   },
   "scripts": {
