--- a/xstate-to-svg/package.json
+++ b/xstate-to-svg/package.json
@@ -36,6 +36,6 @@
   "dependencies": {
     "@types/jest": "^23.3.0",
     "@types/rimraf": "^2.0.2",
-    "state-machine-cat": "^3.0.4-beta-1"
+    "state-machine-cat": "^4.0.0"
   }
 }
