--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "rename-version": "docusaurus-rename-version"
   },
   "devDependencies": {
-    "docusaurus": "^1.4.0"
+    "docusaurus": "^1.4.0",
+    "example": "0.10.2"
   }
 }
