no-deploy: Docusaurus (#148)
* Very basic docusaurus site

* Have Netlify build docusaurus site by default

* First attempt at a logo

* Tweak CSS, logo, and favicon

* Very basic docs site

* Relative path for example JS

* Fix copying of example

* Website depends on example to ensure example is built first

* Remove demo docs

* Update localisation

* Remove autogenerated readme

* Don't include node_modules!

* Remove extra yarn.lock

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /junit.xml
 /redux-saga-state-machine/junit.xml
 /xstate-to-svg/junit.xml
+/website/build
+/website/static/example
+/website/node_modules
