--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,15 @@
 .DS_Store
 /yarn-error.log
 /lerna-debug.log
-/example/yarn-error.log
-/example/dist/bundle.js
-/example/junit.xml
+/examples/kitchen-sink/dist/bundle.js
+/examples/kitchen-sink/junit.xml
 /junit.xml
 /redux-saga-state-machine/junit.xml
 /xstate-to-svg/junit.xml
 /website/build
 /website/static/example
 /website/node_modules
+/examples/minimal/.cache
+/examples/minimal/dist
+/examples/minimal/node_modules
+/examples/kitchen-sink/yarn-error.log
