--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "examples": "docusaurus-examples",
     "start": "docusaurus-start",
-    "prebuild": "cp -R ../example/dist/ ./static/example/",
+    "prebuild": "cp -R ../examples/kitchen-sink/dist/ ./static/example/",
     "build": "docusaurus-build",
     "publish-gh-pages": "docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
@@ -14,6 +14,6 @@
   },
   "devDependencies": {
     "docusaurus": "^1.4.0",
-    "example": "^0.10.3"
+    "example-kitchen-sink": "^0.10.3"
   }
 }
