--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages": [
       "redux-saga-state-machine",
       "xstate-to-svg",
-      "example",
+      "examples/*",
       "website"
     ]
   },
@@ -18,7 +18,7 @@
     "lint": "lerna run lint",
     "build": "lerna run build",
     "publish": "lerna publish --conventional-commits --yes",
-    "junit-merge": "junit-merge ./example/junit.xml ./redux-saga-state-machine/junit.xml ./xstate-to-svg/junit.xml --out ./junit.xml"
+    "junit-merge": "junit-merge ./examples/kitchen-sink/junit.xml ./redux-saga-state-machine/junit.xml ./xstate-to-svg/junit.xml --out ./junit.xml"
   },
   "devDependencies": {
     "lerna": "3.4.1",
